clipped sidebar, fixed window scroll disabled

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,5 +1,8 @@
 body {
   overflow-x: hidden;
+  --header-width: calc(100vw - min(400px, 15vw));
+  --slider-mode-header-width: calc(50vw + var(--header-width) / 2 + 20px);
+  --blur-mode-left-amount: calc(50vw - var(--header-width) / 2);
 }
 
 /* hyperlink style is awful */
